...
                    Label(type.rawValue, systemImage: type.icon).tag(type)
                }
            }

            switch model.contentType {
            case .url:
                TextField("example.com", text: $model.urlString)
                    .keyboardType(.URL)
                    .textInputAutocapitalization(.never)
                    .autocorrectionDisabled()
            case .text:
                TextField("Your text", text: $model.text, axis: .vertical)
                    .lineLimit(1...4)
...
